# django-github-s3

./: .gitignore  README.md  setup.cfg  setup.py
github_storages/: admin.py  apps.py  backend.py  models.py  utils.py
github_storages/migrations/: 0001_initial.py
